--- a/src/components/games-page-parts/MarketsPart.module.scss
+++ b/src/components/games-page-parts/MarketsPart.module.scss
@@ -2,24 +2,38 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   gap: 32px;
   margin-top: 21px;
-  padding: 0 4%;
+  margin-right: 4%;
+  margin-left: 4%;
+  @media (min-width: 1024px) {
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 2px;
+    margin-top: 63px;
+  }
 }
 
-.marketButtonsContainer {
+.linksContainer {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  gap: 2.5rem;
   width: 100%;
+  @media (min-width: 1024px) {
+    flex-direction: column;
+    gap: 2.5rem;
+    justify-content: center;
+    width: 600px;
+    margin: 0;
+  }
 }
 
-.button {
-  display: block;
+.storeLink {
   width: 200px;
   height: 70px;
-  @media (max-width: 640px) {
+  @media (max-width: 768px) {
     width: 164px;
     height: 53px;
   }
@@ -29,26 +43,23 @@
   }
 }
 
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
 .textContainer {
   margin-top: -20px;
+  @media (max-width: 768px) {
+    margin-top: 0;
+  }
   width: 100%;
   @media (min-width: 1024px) {
     width: calc(50% - 150px);
+    margin: 0;
   }
 }
 
 .title {
-  margin-bottom: 25px;
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
   font-size: 22px;
-  color: #28292C;
+  color: #28292c;
   @media (min-width: 1024px) {
     font-size: 35px;
   }
@@ -56,7 +67,7 @@
 
 .description {
   font-family: 'Poppins', sans-serif;
-  font-weight: medium;
+  font-weight: 500;
   font-size: 16px;
   color: #444095;
   @media (min-width: 1024px) {
