--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,40 @@
 @import "./resource.scss";
+
+.slick-track {
+    display: flex;
+  }
+
+  .slick-dots {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    /* width: 100%; */
+    -moz-column-gap: 11px;
+    column-gap: 11px;
+    margin-top: 59px;
+  }
+  .slick-dots .slick-active, .slick-dots li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25px;
+}
+.slick-dots > .slick-active {
+  background: #9c29b2;
+
+}
+.slick-dots li {
+  border-radius: 360px;
+  width: 25px;
+  border: 2px solid #9c29b2;
+}
+  .slick-dots li button {
+    width: 100%;
+    height: 100%;
+  cursor: pointer;
+  opacity: 0;
+  
+}
+.slick-dots :hover {
+  background: rgb(240, 226, 245)
+}
