--- a/src/components/about-us-parts/AboutUsFooter.module.scss
+++ b/src/components/about-us-parts/AboutUsFooter.module.scss
@@ -51,12 +51,13 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 413px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
     position: relative;
+    background-size: contain;
   
     @media (min-width: 640px) {
       width: 90%;
@@ -71,7 +72,6 @@
   }
   
   .hiddenMessageHeader {
-    display: none;
     
     @media (min-width: 1024px) {
       display: block;
@@ -81,24 +81,39 @@
       color: #FF4276;
       margin-bottom: 80px;
     }
+
+    @media (max-width: 640px) {
+      font-weight: 800;
+      font-size: 30px;
+      color: #FF4276;
+    }
   }
   
   .description {
     font-family: 'Poppins', sans-serif;
-    font-size: 21px !important;
+    font-size: calculateRem(21px);
     color: #28292C;
     text-align: center;
-    margin-top: 40px;
+    margin-top: calculateRem(80px);
     margin-bottom: 0;
-    max-width: 500px;
+    max-width: 480px;
     line-height: 30px;
   
     @media (min-width: 640px) {
       font-size: 20px;
-      margin-top: 70px;
+      margin-top: 120px;
+    }
+
+    @media (max-width: 431px) {
+      font-size: 15px;
+      line-height: 20px;
+      margin-top: 55px;
+    max-width: 320px;
+
     }
   
     @media (min-width: 1024px) {
+
       font-size: 25px;
       margin-top: 0;
     }
@@ -129,6 +144,10 @@
       margin-top: 0;
       margin-bottom: -45px;
     }
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
   
   .listContainer {
@@ -137,6 +156,7 @@
     gap: 16px;
     align-items: center;
     margin-top: 20px;
+    padding: calculateRem(20px) calculateRem(30px);
   
     @media (min-width: 1024px) {
       width: 50%;
@@ -156,6 +176,9 @@
     color: #28292C;
     font-size: 20px;
   
+    @media (max-width: 768px) {
+      font-weight: 700;
+    }
     @media (min-width: 1024px) {
       font-size: 25px;
       font-weight: 700;
@@ -173,6 +196,8 @@
       text-align: center;
     }
   
+
+
     @media (min-width: 1024px) {
       margin-right: 10%;
       margin-left: 0;
@@ -199,4 +224,19 @@
       }
     }
   }
-  
+
+  @media (max-width: 768px) {
+    .list {
+      list-style: decimal;
+
+  }
+}
+
+
+
+  @media (max-width: 768px) {
+    .leftBlueImage,
+    .rightBlueImage {
+      display: none;
+    }
+    }
