--- a/src/components/games-page-parts/FooterContent.module.scss
+++ b/src/components/games-page-parts/FooterContent.module.scss
@@ -76,6 +76,12 @@
       font-size: 18px;
     }
   }
+  @media (max-width: 768px) {
+    .flexContainer {
+      flex-direction: column;
+    }  
+  }
+
   
   @media (min-width: 768px) {
     .mainTitle {
