fix videos page

--- a/src/pages/videos-page/VideosPage.module.scss
+++ b/src/pages/videos-page/VideosPage.module.scss
@@ -84,3 +84,9 @@
     }
   }
   
+  .response-container {
+    display: flex;
+    justify-content: center;
+    color: #9c28b2;
+    font-size: calculateRem(20px);
+  }
