--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,11 @@
 @import "./resource.scss";
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between
+}
 .slick-track {
     display: flex;
   }
