--- a/src/pages/kids-blog-page/KidsBlogPage.module.scss
+++ b/src/pages/kids-blog-page/KidsBlogPage.module.scss
@@ -1,133 +1,70 @@
 .container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin-top: -30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 10px;
+  padding: 10px;
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 90vw;
+  height: 50vw;
+  max-width: 1314px;
+  max-height: 760px;
+}
+
+.textContainer {
+  text-align: left;
+}
+
+.title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #28292C;
+}
+
+.paragraph {
+  font-family: Poppins, sans-serif;
+  font-size: 16px;
+  color: rgb(47, 46, 65);
+  font-weight: 400;
+}
+.paragraphBold {
+  font-family: Poppins, sans-serif;
+  font-size: 16px;
+  color: rgb(47, 46, 65);
+  font-weight: 700;
+}
+.list {
+  list-style-type: none;
+  padding: 0;
+  
+  li {
+    margin-bottom: 15px;
     
-    // Adjust for larger screen sizes
-    @media (min-width: 640px) {
-      margin-top: -50px;
+    strong {
+      font-size: 16px;
+      color: #28292C;
     }
-  
-    @media (min-width: 1024px) {
-      margin-top: -120px;
-    }
-  }
-  
-  .imageWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .classmateImage {
-    width: 100%;
-    height: auto;
-    color: transparent;
-  }
-  
-  .row {
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row-reverse;
-  }
-  
-  .zigZagImage {
-    width: 100%;
-    transform: scale(1.75) translateY(3px);
-    transition: transform 0.3s ease;
-  
-    @media (min-width: 1024px) {
-      transform: scale(1) translateY(0);
+
+    p {
+      font-size: 16px;
+      color: rgb(47, 46, 65);
+      font-weight: 400;
     }
   }
-  
-  /* New Section */
-  .flexContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items: center;
-  
-    @media (min-width: 640px) {
-      flex-direction: row;
-      justify-content: space-around;
-    }
-  }
-  
-  .header {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 800;
-    text-align: center;
-    font-size: 50px;
-    color: rgb(156 40 178); // Adjust the color
-    padding-bottom: calculateRem(30px);
-  }
-  
-  .smHidden {
-    @media (min-width: 640px) {
-      display: none;
-    }
-  }
-  
-  .smBlock {
-    display: block;
-    @media (min-width: 640px) {
-      display: none;
-    }
-  }
-  
-  .yellowDogImage {
-    display: none;
-  
-    @media (min-width: 640px) {
-      display: block;
-      width: 349px;
-      height: 524px;
-      object-fit: cover;
-      margin-left: 16px;
-    }
-  
-    @media (min-width: 1536px) {
-      width: 449px;
-      height: 624px;
-      transform: translateX(16px);
-    }
-  }
-  
-  .description {
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px !important;
-    line-height: 35px;
-    color: #28292C;
-    text-align: center;
-    padding: 0 calculateRem(180px);
-  
-    @media (min-width: 640px) {
-      font-size: 20px;
-    }
-  
-    @media (min-width: 1024px) {
-      font-size: 25px;
-    }
-  }
-  
-  .yellowDogImageSmall {
-    width: 252px;
-    height: 378px;
-  
-    @media (min-width: 640px) {
-      width: 349px;
-      height: 524px;
-    }
-  }
-  
-  .mdHidden {
-    display: none;
-  
-    @media (min-width: 768px) {
-      display: block;
-    }
-  }
-  
+}
